--- a/part01/ch10_스타벅스예제/index.html
+++ b/part01/ch10_스타벅스예제/index.html
@@ -31,6 +31,10 @@
     <link rel="icon" href="./favicon.png" />
     <!-- reset.css 삽입 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
+    <!-- google fonts Nanum Gothic(Bold 400, 700) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
