--- a/part01/ch10_스타벅스예제/index.html
+++ b/part01/ch10_스타벅스예제/index.html
@@ -35,9 +35,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet" />
+    <!-- google Material Icons (구글 아이콘 사용하기 위해 삽입) -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     Hello World!
+    <span class="material-icons"> login </span>
   </body>
 </html>
