--- a/part01/ch10_스타벅스예제/index.html
+++ b/part01/ch10_스타벅스예제/index.html
@@ -40,7 +40,14 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    Hello World!
-    <span class="material-icons"> login </span>
+    <!-- HEADER -->
+    <header>
+      <div class="inner">
+        <!-- 로고를 누르면 홈으로 이동 -->
+        <a href="/" class="logo">
+          <img src="./images/starbucks_logo.png" alt="STARBUCKS" />
+        </a>
+      </div>
+    </header>
   </body>
 </html>
