ch10 - 헤더와 드롭다운 메뉴 - 검색

--- a/part01/ch10_스타벅스예제/index.html
+++ b/part01/ch10_스타벅스예제/index.html
@@ -38,6 +38,7 @@
     <!-- google Material Icons (구글 아이콘 사용하기 위해 삽입) -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="./css/main.css" />
+    <script src="./js/main.js" defer></script>
   </head>
   <body>
     <!-- HEADER -->
