--- a/part01/ch10_스타벅스예제/index.html
+++ b/part01/ch10_스타벅스예제/index.html
@@ -454,6 +454,10 @@
           </div>
         </div>
       </div>
+
+      <div class="promotion">
+        <div class="swiper-container">TEST!!</div>
+      </div>
     </section>
   </body>
 </html>
