--- a/part01/ch10_스타벅스예제/index.html
+++ b/part01/ch10_스타벅스예제/index.html
@@ -56,6 +56,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
+    <script src="./js/youtube.js" defer></script>
     <script src="./js/main.js" defer></script>
   </head>
   <body>
@@ -510,6 +511,14 @@
           <div class="btn gift">e-Gift 선물하기</div>
         </div>
       </div>
+    </section>
+
+    <!-- YOUTUBE VIDEO -->
+    <section class="youtube">
+      <div class="youtube__area">
+        <div id="player"></div>
+      </div>
+      <div class="youtube__cover"></div>
     </section>
   </body>
 </html>
