--- a/part01/ch10_스타벅스예제/index.html
+++ b/part01/ch10_스타벅스예제/index.html
@@ -45,9 +45,17 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+
+    <!-- GSAP & ScrollToPlugin -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"
       integrity="sha512-UxP+UhJaGRWuMG2YC6LPWYpFQnsSgnor0VUF3BHdD83PS/pOpN+FYbZmrYN+ISX8jnvgVUciqP/fILOXDjZSwg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollToPlugin.min.js"
+      integrity="sha512-1OG9UO4krPizjtz/c9iDbjCqtXznBYdJeD4ccPaYfJHzC6F1qoQ3P1bgQ3J8lgCoK5qGVCqsY4+/RKjLDzITVQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
@@ -680,5 +688,9 @@
         <img src="./images/starbucks_logo_only_text.png" alt="" class="logo" />
       </div>
     </footer>
+
+    <div id="to-top">
+      <div class="material-icons">arrow_upward</div>
+    </div>
   </body>
 </html>
