스타벅스 예제 마무리

--- a/part01/ch10_스타벅스예제/index.html
+++ b/part01/ch10_스타벅스예제/index.html
@@ -72,7 +72,7 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <!-- <script src="./js/youtube.js" defer></script> -->
+    <script src="./js/youtube.js" defer></script>
     <script src="./js/main.js" defer></script>
   </head>
   <body>
