--- a/part03_jsEssentials/ch2_jsStarter/index.html
+++ b/part03_jsEssentials/ch2_jsStarter/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- <script src="./데이터타입확인.js" defer></script> -->
-    <script src="산술_할당연산자.js" defer></script>
+    <!-- <script src="산술_할당연산자.js" defer></script> -->
+    <script src="비교_논리연산자.js" defer></script>
   </head>
   <body>
     <h1>Hello World!</h1>
