js 조건문 if, switch

--- a/part03_jsEssentials/ch2_jsStarter/index.html
+++ b/part03_jsEssentials/ch2_jsStarter/index.html
@@ -7,7 +7,8 @@
     <!-- <script src="./데이터타입확인.js" defer></script> -->
     <!-- <script src="산술_할당연산자.js" defer></script> -->
     <!-- <script src="비교_논리연산자.js" defer></script> -->
-    <script src="./삼항연산자.js" defer></script>
+    <!-- <script src="./삼항연산자.js" defer></script> -->
+    <script src="./조건문_if_switch.js" defer></script>
   </head>
   <body>
     <h1>Hello World!</h1>
