js 변수 유효범위(var, let, const) scope

--- a/part03_jsEssentials/ch2_jsStarter/index.html
+++ b/part03_jsEssentials/ch2_jsStarter/index.html
@@ -9,7 +9,8 @@
     <!-- <script src="비교_논리연산자.js" defer></script> -->
     <!-- <script src="./삼항연산자.js" defer></script> -->
     <!-- <script src="./조건문_if_switch.js" defer></script> -->
-    <script src="./반복문_for.js" defer></script>
+    <!-- <script src="./반복문_for.js" defer></script> -->
+    <script src="./변수유효범위.js" defer></script>
   </head>
   <body>
     <h1>Hello World!</h1>
