--- a/part03_jsEssentials/ch3_jsFunction/index.html
+++ b/part03_jsEssentials/ch3_jsFunction/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./함수복습.js" defer></script>
+    <!-- <script src="./함수복습.js" defer></script> -->
+    <script src="./IIFE(즉시실행함수).js" defer></script>
   </head>
   <body>
     <h1>hello world</h1>
