js 타이머 함수 setTimeout, setInterval

--- a/part03_jsEssentials/ch3_jsFunction/index.html
+++ b/part03_jsEssentials/ch3_jsFunction/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <!-- <script src="./함수복습.js" defer></script> -->
     <!-- <script src="./IIFE(즉시실행함수).js" defer></script> -->
-    <script src="./호이스팅.js" defer></script>
+    <!-- <script src="./호이스팅.js" defer></script> -->
+    <script src="./타이머함수.js" defer></script>
   </head>
   <body>
     <h1>hello world</h1>
