--- a/part03_jsEssentials/ch4_jsClass/index.html
+++ b/part03_jsEssentials/ch4_jsClass/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- <script src="./생성자함수(prototype).js" defer></script> -->
-    <script src="./this.js" defer></script>
+    <!-- <script src="./this.js" defer></script> -->
+    <script src="./es6classes.js" defer></script>
   </head>
   <body>
     <h1>Hello World!</h1>
