--- a/part03_jsEssentials/ch4_jsClass/index.html
+++ b/part03_jsEssentials/ch4_jsClass/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <!-- <script src="./생성자함수(prototype).js" defer></script> -->
     <!-- <script src="./this.js" defer></script> -->
-    <script src="./es6classes.js" defer></script>
+    <!-- <script src="./es6classes.js" defer></script> -->
+    <script src="./상속(확장).js" defer></script>
   </head>
   <body>
     <h1>Hello World!</h1>
