js 데이터 배열01

--- a/04JsLevelUp/ch1JsData/index.html
+++ b/04JsLevelUp/ch1JsData/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- <script src="./문자.js" defer></script> -->
-    <script src="./숫자와수학.js" defer></script>
+    <!-- <script src="./숫자와수학.js" defer></script> -->
+    <script src="./배열01.js" defer></script>
   </head>
   <body>
     <h1>Hello World</h1>
