--- a/04JsLevelUp/ch1JsData/index.html
+++ b/04JsLevelUp/ch1JsData/index.html
@@ -7,7 +7,8 @@
     <!-- <script src="./문자.js" defer></script> -->
     <!-- <script src="./숫자와수학.js" defer></script> -->
     <!-- <script src="./배열01.js" defer></script> -->
-    <script src="./배열02.js" defer></script>
+    <!-- <script src="./배열02.js" defer></script> -->
+    <script src="./객체.js" defer></script>
   </head>
   <body>
     <h1>Hello World</h1>
