js 데이터 불변성 immutability

--- a/04JsLevelUp/ch1JsData/index.html
+++ b/04JsLevelUp/ch1JsData/index.html
@@ -10,7 +10,8 @@
     <!-- <script src="./배열02.js" defer></script> -->
     <!-- <script src="./객체.js" defer></script> -->
     <!-- <script src="./구조분해할당.js" defer></script> -->
-    <script src="./전개연산자.js" defer></script>
+    <!-- <script src="./전개연산자.js" defer></script> -->
+    <script src="./불변성.js" defer></script>
   </head>
   <body>
     <h1>Hello World</h1>
