--- a/04JsLevelUp/ch2JsDataPractice/index.html
+++ b/04JsLevelUp/ch2JsDataPractice/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- <script src="./가져오기_내보내기.js" defer></script> -->
-    <script src="./lodash사용법.js" defer></script>
+    <!-- <script src="./lodash사용법.js" defer></script> -->
+    <script src="./json.js" defer></script>
   </head>
   <body>
     <h1>Hello World!</h1>
