js 데이터 실습 Storage

--- a/04JsLevelUp/ch2JsDataPractice/index.html
+++ b/04JsLevelUp/ch2JsDataPractice/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <!-- <script src="./가져오기_내보내기.js" defer></script> -->
     <!-- <script src="./lodash사용법.js" defer></script> -->
-    <script src="./json.js" defer></script>
+    <!-- <script src="./json.js" defer></script> -->
+    <script src="./storage.js" defer></script>
   </head>
   <body>
     <h1>Hello World!</h1>
