--- a/04JsLevelUp/ch2JsDataPractice/index.html
+++ b/04JsLevelUp/ch2JsDataPractice/index.html
@@ -7,9 +7,11 @@
     <!-- <script src="./가져오기_내보내기.js" defer></script> -->
     <!-- <script src="./lodash사용법.js" defer></script> -->
     <!-- <script src="./json.js" defer></script> -->
-    <script src="./storage.js" defer></script>
+    <!-- <script src="./storage.js" defer></script> -->
+    <script src="./OMdbAPI.js" defer></script>
   </head>
   <body>
     <h1>Hello World!</h1>
+    <img src="" alt="" width="200" />
   </body>
 </html>
