--- a/04JsLevelUp/ch3RegularExpression/index.html
+++ b/04JsLevelUp/ch3RegularExpression/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./정규식생성.js" defer></script>
+    <!-- <script src="./정규식생성.js" defer></script> -->
+    <script src="./메소드.js" defer></script>
   </head>
   <body>
     <h1>Hello Regexp</h1>
