js 정규표현식 패턴(표현)02

--- a/04JsLevelUp/ch3RegularExpression/index.html
+++ b/04JsLevelUp/ch3RegularExpression/index.html
@@ -7,7 +7,8 @@
     <!-- <script src="./정규식생성.js" defer></script> -->
     <!-- <script src="./메소드.js" defer></script> -->
     <!-- <script src="./플래그(옵션).js" defer></script> -->
-    <script src="./패턴(표현)1.js" defer></script>
+    <!-- <script src="./패턴(표현)1.js" defer></script> -->
+    <script src="./패턴(표현)2.js" defer></script>
   </head>
   <body>
     <h1>Hello Regexp</h1>
