--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
-    <link rel="stylesheet" href="./width_height.css" />
+    <!-- <link rel="stylesheet" href="./width_height.css" /> -->
+    <link rel="stylesheet" href="./measure.css" />
   </head>
   <body>
-    <div class="div">Hello Div</div>
+    <!-- width, height -->
+    <!-- <div class="div">Hello Div</div>
     <span>Hello Span</span>
+    <div class="parent">
+      <div class="child"></div>
+    </div> -->
+
+    <!-- measure -->
     <div class="parent">
       <div class="child"></div>
     </div>
