--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
     <!-- <link rel="stylesheet" href="./width_height.css" /> -->
-    <link rel="stylesheet" href="./measure.css" />
+    <!-- <link rel="stylesheet" href="./measure.css" /> -->
+    <link rel="stylesheet" href="./margin.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -17,8 +18,15 @@
     </div> -->
 
     <!-- measure -->
-    <div class="parent">
+    <!-- <div class="parent">
       <div class="child"></div>
+    </div> -->
+
+    <!-- margin -->
+    <div class="container">
+      <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
     </div>
   </body>
 </html>
