--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
     <!-- <link rel="stylesheet" href="./width_height.css" /> -->
     <!-- <link rel="stylesheet" href="./measure.css" /> -->
-    <link rel="stylesheet" href="./margin.css" />
+    <!-- <link rel="stylesheet" href="./margin.css" /> -->
+    <link rel="stylesheet" href="./padding.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -23,8 +24,14 @@
     </div> -->
 
     <!-- margin -->
-    <div class="container">
+    <!-- <div class="container">
       <div class="item"></div>
+      <div class="item"></div>
+      <div class="item"></div>
+    </div> -->
+
+    <!-- padding -->
+    <div class="container">
       <div class="item"></div>
       <div class="item"></div>
     </div>
