--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -8,7 +8,8 @@
     <!-- <link rel="stylesheet" href="./width_height.css" /> -->
     <!-- <link rel="stylesheet" href="./measure.css" /> -->
     <!-- <link rel="stylesheet" href="./margin.css" /> -->
-    <link rel="stylesheet" href="./padding.css" />
+    <!-- <link rel="stylesheet" href="./padding.css" /> -->
+    <link rel="stylesheet" href="./border.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -30,7 +31,7 @@
       <div class="item"></div>
     </div> -->
 
-    <!-- padding -->
+    <!-- padding, border -->
     <div class="container">
       <div class="item"></div>
       <div class="item"></div>
