css border-radius

--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -9,7 +9,8 @@
     <!-- <link rel="stylesheet" href="./measure.css" /> -->
     <!-- <link rel="stylesheet" href="./margin.css" /> -->
     <!-- <link rel="stylesheet" href="./padding.css" /> -->
-    <link rel="stylesheet" href="./border.css" />
+    <!-- <link rel="stylesheet" href="./border.css" /> -->
+    <link rel="stylesheet" href="./border-radius.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -32,9 +33,12 @@
     </div> -->
 
     <!-- padding, border -->
-    <div class="container">
+    <!-- <div class="container">
       <div class="item"></div>
       <div class="item"></div>
-    </div>
+    </div> -->
+
+    <!-- border-radius -->
+    <div></div>
   </body>
 </html>
