--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -10,7 +10,8 @@
     <!-- <link rel="stylesheet" href="./margin.css" /> -->
     <!-- <link rel="stylesheet" href="./padding.css" /> -->
     <!-- <link rel="stylesheet" href="./border.css" /> -->
-    <link rel="stylesheet" href="./border-radius.css" />
+    <!-- <link rel="stylesheet" href="./border-radius.css" /> -->
+    <link rel="stylesheet" href="./box-sizing.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -39,6 +40,10 @@
     </div> -->
 
     <!-- border-radius -->
-    <div></div>
+    <!-- <div></div> -->
+
+    <!-- box-sizing -->
+    <!-- <div class="item">Hello</div>
+    <div class="item">Hello</div> -->
   </body>
 </html>
