--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -11,7 +11,8 @@
     <!-- <link rel="stylesheet" href="./padding.css" /> -->
     <!-- <link rel="stylesheet" href="./border.css" /> -->
     <!-- <link rel="stylesheet" href="./border-radius.css" /> -->
-    <link rel="stylesheet" href="./box-sizing.css" />
+    <!-- <link rel="stylesheet" href="./box-sizing.css" /> -->
+    <link rel="stylesheet" href="overflow.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -21,10 +22,10 @@
       <div class="child"></div>
     </div> -->
 
-    <!-- measure -->
-    <!-- <div class="parent">
+    <!-- measure, overflow -->
+    <div class="parent">
       <div class="child"></div>
-    </div> -->
+    </div>
 
     <!-- margin -->
     <!-- <div class="container">
