--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -12,7 +12,8 @@
     <!-- <link rel="stylesheet" href="./border.css" /> -->
     <!-- <link rel="stylesheet" href="./border-radius.css" /> -->
     <!-- <link rel="stylesheet" href="./box-sizing.css" /> -->
-    <link rel="stylesheet" href="overflow.css" />
+    <!-- <link rel="stylesheet" href="overflow.css" /> -->
+    <link rel="stylesheet" href="display.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -23,9 +24,9 @@
     </div> -->
 
     <!-- measure, overflow -->
-    <div class="parent">
+    <!-- <div class="parent">
       <div class="child"></div>
-    </div>
+    </div> -->
 
     <!-- margin -->
     <!-- <div class="container">
@@ -46,5 +47,8 @@
     <!-- box-sizing -->
     <!-- <div class="item">Hello</div>
     <div class="item">Hello</div> -->
+
+    <!-- display -->
+    <span>Hello World!</span>
   </body>
 </html>
