--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -12,8 +12,9 @@
     <!-- <link rel="stylesheet" href="./border.css" /> -->
     <!-- <link rel="stylesheet" href="./border-radius.css" /> -->
     <!-- <link rel="stylesheet" href="./box-sizing.css" /> -->
-    <!-- <link rel="stylesheet" href="overflow.css" /> -->
-    <link rel="stylesheet" href="display.css" />
+    <!-- <link rel="stylesheet" href="./overflow.css" /> -->
+    <!-- <link rel="stylesheet" href="./display.css" /> -->
+    <link rel="stylesheet" href="./opacity.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -23,10 +24,10 @@
       <div class="child"></div>
     </div> -->
 
-    <!-- measure, overflow -->
-    <!-- <div class="parent">
+    <!-- measure, overflow, opactiy -->
+    <div class="parent">
       <div class="child"></div>
-    </div> -->
+    </div>
 
     <!-- margin -->
     <!-- <div class="container">
@@ -49,6 +50,6 @@
     <div class="item">Hello</div> -->
 
     <!-- display -->
-    <span>Hello World!</span>
+    <!-- <span>Hello World!</span> -->
   </body>
 </html>
