--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -14,7 +14,8 @@
     <!-- <link rel="stylesheet" href="./box-sizing.css" /> -->
     <!-- <link rel="stylesheet" href="./overflow.css" /> -->
     <!-- <link rel="stylesheet" href="./display.css" /> -->
-    <link rel="stylesheet" href="./opacity.css" />
+    <!-- <link rel="stylesheet" href="./opacity.css" /> -->
+    <link rel="stylesheet" href="./font.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -25,9 +26,9 @@
     </div> -->
 
     <!-- measure, overflow, opactiy -->
-    <div class="parent">
+    <!-- <div class="parent">
       <div class="child"></div>
-    </div>
+    </div> -->
 
     <!-- margin -->
     <!-- <div class="container">
@@ -51,5 +52,12 @@
 
     <!-- display -->
     <!-- <span>Hello World!</span> -->
+
+    <!-- font -->
+    <h1>Hello world!</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos beatae animi ad perferendis, quam earum. Vel eligendi necessitatibus
+      tenetur sapiente!
+    </p>
   </body>
 </html>
