--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -15,7 +15,8 @@
     <!-- <link rel="stylesheet" href="./overflow.css" /> -->
     <!-- <link rel="stylesheet" href="./display.css" /> -->
     <!-- <link rel="stylesheet" href="./opacity.css" /> -->
-    <link rel="stylesheet" href="./font.css" />
+    <!-- <link rel="stylesheet" href="./font.css" /> -->
+    <link rel="stylesheet" href="./text.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -54,10 +55,21 @@
     <!-- <span>Hello World!</span> -->
 
     <!-- font -->
-    <h1>Hello world!</h1>
+    <!-- <h1>Hello world!</h1>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos beatae animi ad perferendis, quam earum. Vel eligendi necessitatibus
       tenetur sapiente!
+    </p> -->
+
+    <!-- text -->
+    <a href="javascript:void(0)">Google</a>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis nisi itaque obcaecati illo architecto recusandae deleniti mollitia
+      earum cumque. Est unde provident sed at totam, illum assumenda accusantium nihil nulla atque facilis dolorem? Facere soluta ipsa quod
+      natus, quae, non eaque sapiente quidem ab quis itaque quas repellat amet deleniti commodi aspernatur rem provident deserunt ad velit
+      sit hic? Perspiciatis maiores recusandae neque consequuntur velit sint nobis! Harum expedita quidem nam voluptatem modi! Dolorum
+      blanditiis voluptates ullam atque eius ducimus deleniti quos, quibusdam iste distinctio provident fuga! Totam, laudantium rerum
+      perspiciatis nihil vitae exercitationem quam adipisci aut ullam magnam possimus.
     </p>
   </body>
 </html>
