--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -16,7 +16,8 @@
     <!-- <link rel="stylesheet" href="./display.css" /> -->
     <!-- <link rel="stylesheet" href="./opacity.css" /> -->
     <!-- <link rel="stylesheet" href="./font.css" /> -->
-    <link rel="stylesheet" href="./text.css" />
+    <!-- <link rel="stylesheet" href="./text.css" /> -->
+    <link rel="stylesheet" href="./background.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -62,7 +63,7 @@
     </p> -->
 
     <!-- text -->
-    <a href="javascript:void(0)">Google</a>
+    <!-- <a href="javascript:void(0)">Google</a>
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis nisi itaque obcaecati illo architecto recusandae deleniti mollitia
       earum cumque. Est unde provident sed at totam, illum assumenda accusantium nihil nulla atque facilis dolorem? Facere soluta ipsa quod
@@ -70,6 +71,9 @@
       sit hic? Perspiciatis maiores recusandae neque consequuntur velit sint nobis! Harum expedita quidem nam voluptatem modi! Dolorum
       blanditiis voluptates ullam atque eius ducimus deleniti quos, quibusdam iste distinctio provident fuga! Totam, laudantium rerum
       perspiciatis nihil vitae exercitationem quam adipisci aut ullam magnam possimus.
-    </p>
+    </p> -->
+
+    <!-- background -->
+    <div></div>
   </body>
 </html>
