--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -17,7 +17,8 @@
     <!-- <link rel="stylesheet" href="./opacity.css" /> -->
     <!-- <link rel="stylesheet" href="./font.css" /> -->
     <!-- <link rel="stylesheet" href="./text.css" /> -->
-    <link rel="stylesheet" href="./background.css" />
+    <!-- <link rel="stylesheet" href="./background.css" /> -->
+    <link rel="stylesheet" href="./position1.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -74,6 +75,20 @@
     </p> -->
 
     <!-- background -->
-    <div></div>
+    <!-- <div></div> -->
+
+    <!-- position -->
+    <!-- <div class="wrap">
+      <div class="container">
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+      </div>
+    </div> -->
+    <div class="container">
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+    </div>
   </body>
 </html>
