--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -18,7 +18,8 @@
     <!-- <link rel="stylesheet" href="./font.css" /> -->
     <!-- <link rel="stylesheet" href="./text.css" /> -->
     <!-- <link rel="stylesheet" href="./background.css" /> -->
-    <link rel="stylesheet" href="./position1.css" />
+    <!-- <link rel="stylesheet" href="./position1.css" /> -->
+    <link rel="stylesheet" href="./flex.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -85,10 +86,19 @@
         <div class="item">3</div>
       </div>
     </div> -->
+    <!-- <div class="container">
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+    </div> -->
+
+    <!-- flex -->
     <div class="container">
       <div class="item">1</div>
       <div class="item">2</div>
       <div class="item">3</div>
+      <!-- <div class="item">4</div>
+      <div class="item">5</div> -->
     </div>
   </body>
 </html>
