--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -19,7 +19,8 @@
     <!-- <link rel="stylesheet" href="./text.css" /> -->
     <!-- <link rel="stylesheet" href="./background.css" /> -->
     <!-- <link rel="stylesheet" href="./position1.css" /> -->
-    <link rel="stylesheet" href="./flex.css" />
+    <!-- <link rel="stylesheet" href="./flex.css" /> -->
+    <link rel="stylesheet" href="./transition.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -93,12 +94,13 @@
     </div> -->
 
     <!-- flex -->
-    <div class="container">
+    <!-- <div class="container">
       <div class="item">1</div>
       <div class="item">2</div>
       <div class="item">3</div>
-      <!-- <div class="item">4</div>
-      <div class="item">5</div> -->
-    </div>
+    </div> -->
+
+    <!-- transition -->
+    <div></div>
   </body>
 </html>
