--- a/part01/ch8_CSS속성/index.html
+++ b/part01/ch8_CSS속성/index.html
@@ -20,7 +20,8 @@
     <!-- <link rel="stylesheet" href="./background.css" /> -->
     <!-- <link rel="stylesheet" href="./position1.css" /> -->
     <!-- <link rel="stylesheet" href="./flex.css" /> -->
-    <link rel="stylesheet" href="./transition.css" />
+    <!-- <link rel="stylesheet" href="./transition.css" /> -->
+    <link rel="stylesheet" href="./transform.css" />
   </head>
   <body>
     <!-- width, height -->
@@ -101,6 +102,11 @@
     </div> -->
 
     <!-- transition -->
-    <div></div>
+    <!-- <div></div> -->
+
+    <!-- transform -->
+    <div class="container">
+      <div class="item">AB</div>
+    </div>
   </body>
 </html>
